--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,7 +15,7 @@ jobs:
           
           
       - name: Upload bin directory
-        uses: actions/upload-artifact@m
+        uses: actions/upload-artifact@main
         with:
          name: OpenWrt${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
          path: openwrt
