--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,4 +17,4 @@ jobs:
         uses: actions/upload-artifact@main
         with:
          name: OpenWrt${{ env.DEVICE_NAME }}
-         path: openwrt
+         path: openwrt-passwall
