--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,8 +13,9 @@ jobs:
         run: |
           git config --global user.name "残梦"
           git config --global user.email canmengxian@qq.com
+          git commit -m "download youtube video"
           git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git clone https://github.com/xiaorouji/openwrt-passwall.git
-          git pull
+          git pull --rebase
           git add .
+          git commit -m "download"
           git push
