--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,13 +9,23 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v2
 
+#      - name: download
+#        run: |
+#          git config --global user.name "残梦"
+#          git config --global user.email canmengxian@qq.com
+#         git clone https://software-download.microsoft.com/download/sg/17763.107.101029-1455.rs5_release_svc_refresh_CLIENT_LTSC_EVAL_x64FRE_zh-cn.iso
+#          git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+#          git pull --rebase
+#          git add .
+#          git commit -m "download"
+#          git push
+          
       - name: download
         run: |
-          git config --global user.name "残梦"
-          git config --global user.email canmengxian@qq.com
           git clone https://github.com/xiaorouji/openwrt-passwall.git
-          git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git pull --rebase
-          git add .
-          git commit -m "download"
-          git push
+          
+      - name: 上传固件目录
+        uses: actions/upload-artifact@main
+        with:
+         path: ${{ env.FIRMWARE }}
+          
