--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -19,34 +19,39 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
+    name: Update ${{matrix.target}}
+    strategy:
+      fail-fast: false
+      matrix:
+        target: [ packages,packages-19.07 ]
 
-      - name: Initialization environment
-        env:
-          DEBIAN_FRONTEND: noninteractive
-        run: |
-          sudo -E apt-get -qq update
-          sudo -E apt-get -qq install git subversion git-core wget
-          sudo timedatectl set-timezone "Asia/Shanghai"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
+        - name: Initialization environment
+          env:
+            DEBIAN_FRONTEND: noninteractive
+          run: |
+            sudo -E apt-get -qq update
+            sudo -E apt-get -qq install git subversion git-core wget
+            sudo timedatectl set-timezone "Asia/Shanghai"
+            git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git config --global user.name "github-actions[bot]"
 
-      - name: Clone packages
-        run: |
-          cd $GITHUB_WORKSPACE
-          chmod +x packages.sh
-          git clone https://github.com/canmengxian/12.git
-          cd 12
-          rm -Rf *
-          git rm --cache *
-          $GITHUB_WORKSPACE/packages.sh
+        - name: Clone packages
+          run: |
+            cd $GITHUB_WORKSPACE
+            chmod +x ${{matrix.target}}.sh
+            git clone -b ${{matrix.target}} https://github.com/canmengxian/12.git ${{matrix.target}}
+            cd ${{matrix.target}} 
+            rm -Rf *
+            git rm --cache *
+            $GITHUB_WORKSPACE/${{matrix.target}}.sh
 
-      - name: Upload
-        env:
-          GITHUB_TOKEN: ${{ secrets.GB1_TOKEN }}
-        run: |
-          [ -e $GITHUB_WORKSPACE/LICENSE ] && cp $GITHUB_WORKSPACE/LICENSE $GITHUB_WORKSPACE/packages
-          [ -e $GITHUB_WORKSPACE/README.md ] && cp $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/packages
-          cd $GITHUB_WORKSPACE/packages
-          git add .
-          git commit -m "更新$(TZ='Asia/Shanghai' date +@%Y%m%d)"
-          git push --quiet "https://${{ secrets.GB1_TOKEN }}@github.com/canmengxian/12.git" HEAD:packages
+        - name: Upload
+          env:
+            GITHUB_TOKEN: ${{ secrets.GB1_TOKEN }}
+          run: |
+            [ -e $GITHUB_WORKSPACE/LICENSE ] && cp $GITHUB_WORKSPACE/LICENSE $GITHUB_WORKSPACE/${{matrix.target}}
+            [ -e $GITHUB_WORKSPACE/README.md ] && cp $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/${{matrix.target}}
+            cd $GITHUB_WORKSPACE/${{matrix.target}}
+            git add .
+            git commit -m "更新$(TZ='Asia/Shanghai' date +@%Y%m%d)"
+            git push --quiet "https://${{ secrets.GB1_TOKEN }}@github.com/canmengxian/12.git" HEAD:${{matrix.target}}
