--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -15,50 +15,73 @@ on:
 env:
   TZ: Asia/Shanghai
 
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#    if: github.event.repository.owner.id == github.event.sender.id
+#    name: Update ${{matrix.target}}
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        target: [ packages,packages-19.07 ]
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  merge:
     if: github.event.repository.owner.id == github.event.sender.id
-    name: Update ${{matrix.target}}
-    strategy:
-      fail-fast: false
-      matrix:
-        target: [ packages,packages-19.07 ]
+    runs-on: Ubuntu-20.04
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@main
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        ref: master
+        fetch-depth: 0
+        lfs: true
 
-      - name: Initialization environment
-        env:
+
+    - name: Initialization environment
+      env:
           DEBIAN_FRONTEND: noninteractive
-        run: |
+      run: |
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install git subversion git-core wget
           sudo timedatectl set-timezone "$TZ"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
 
-      - name: Clone packages
-        run: |
-          cd $GITHUB_WORKSPACE
-          chmod +x ${{matrix.target}}.sh
-          git clone -b ${{matrix.target}} https://github.com/liuran001/openwrt-packages.git ${{matrix.target}}
-          cd ${{matrix.target}}
-          rm -Rf *
-          git rm --cache *
-          $GITHUB_WORKSPACE/${{matrix.target}}.sh
-
-      - name: Upload
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          [ -e $GITHUB_WORKSPACE/LICENSE ] && cp $GITHUB_WORKSPACE/LICENSE $GITHUB_WORKSPACE/${{matrix.target}}
-          [ -e $GITHUB_WORKSPACE/README.md ] && cp $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/${{matrix.target}}
-          cd $GITHUB_WORKSPACE/${{matrix.target}}
-          git add .
-          git commit -m "update$(TZ='Asia/Shanghai' date +@%Y%m%d)"
-          git push --quiet "https://${{ secrets.TOKEN }}@github.com/liuran001/openwrt-packages.git" HEAD:${{matrix.target}}
+        
+    - name: Syn upstream
+      run: |
+          rm -rf `find -maxdepth 1 -type d -name "[!.]*" ! -path "./diy"`
+          git rm -r --cache *
+          git clone --depth 1 https://github.com/garypang13/luci-app-eqos
+          svn co https://github.com/coolsnowwolf/packages/trunk/net/mwan3
+    - name: SSH connection to Actions
+      uses: garypang13/debugger-action@master
+      if: 1 == 0
+#      - name: Clone packages
+#        run: |
+#          cd $GITHUB_WORKSPACE
+#          chmod +x ${{matrix.target}}.sh
+#          git clone -b ${{matrix.target}} https://github.com/liuran001/openwrt-packages.git ${{matrix.target}}
+#          cd ${{matrix.target}}
+#          rm -Rf *
+#          git rm --cache *
+#          $GITHUB_WORKSPACE/${{matrix.target}}.sh
+    - name: Apply
+      run: |
+         git add .
+         git commit -m "update" || true
+         git push
+#      - name: Upload
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        run: |
+#          [ -e $GITHUB_WORKSPACE/LICENSE ] && cp $GITHUB_WORKSPACE/LICENSE $GITHUB_WORKSPACE/${{matrix.target}}
+#          [ -e $GITHUB_WORKSPACE/README.md ] && cp $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/${{matrix.target}}
+#          cd $GITHUB_WORKSPACE/${{matrix.target}}
+#          git add .
+#          git commit -m "update$(TZ='Asia/Shanghai' date +@%Y%m%d)"
+#          git push --quiet "https://${{ secrets.TOKEN }}@github.com/liuran001/openwrt-packages.git" HEAD:${{matrix.target}}
  
 
  
