--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -7,11 +7,12 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:
   schedule:
     - cron: 0 */12 * * *
   watch:
     types: started
-
+    
 env:
   TZ: Asia/Shanghai
 
