--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -43,7 +43,8 @@ jobs:
       run: |
           rm -rf `find -maxdepth 1 -type d -name "[!.]*" ! -path "./diy"`
           git rm -r --cache *
-          git clone --depth 1 https://github.com/garypang13/my-packages && mv -f my-packages/* ./ ; rm -Rf my-packages
+          git clone --depth 1 https://github.com/garypang13/my-packages
+          mv -f my-packages/* ./
 
     - name: SSH connection to Actions
       uses: garypang13/debugger-action@master
