--- a/.github/workflows/1.yaml
+++ b/.github/workflows/1.yaml
@@ -48,23 +48,22 @@ jobs:
           git clone --depth 1 https://github.com/sirpdboy/luci-app-autotimeset.git
           git clone --depth 1 https://github.com/BoringCat/luci-app-mentohust
           git clone --depth 1 https://github.com/project-lede/luci-app-godproxy
-          git clone --depth 1 https://github.com/tty228/luci-app-serverchan &
-          git clone --depth 1 https://github.com/BoringCat/luci-app-minieap &
-          git clone --depth 1 https://github.com/jerrykuku/luci-app-vssr &
-          git clone --depth 1 https://github.com/ysc3839/luci-proto-minieap &
-          git clone --depth 1 https://github.com/sirpdboy/luci-app-advanced &
-          git clone --depth 1 https://github.com/jerrykuku/luci-app-jd-dailybonus &
+          git clone --depth 1 https://github.com/tty228/luci-app-serverchan
+          git clone --depth 1 https://github.com/BoringCat/luci-app-minieap
+          git clone --depth 1 https://github.com/jerrykuku/luci-app-vssr
+          git clone --depth 1 https://github.com/ysc3839/luci-proto-minieap
+          git clone --depth 1 https://github.com/sirpdboy/luci-app-advanced
+          git clone --depth 1 https://github.com/jerrykuku/luci-app-jd-dailybonus
           git clone --depth 1 https://github.com/rufengsuixing/luci-app-syncdial      
-          git clone --depth 1 https://github.com/sirpdboy/luci-app-netdata &
-          git clone --depth 1 https://github.com/sensec/ddns-scripts_aliyun&
-          git clone --depth 1 https://github.com/KumaTea/MentoHUST-SYSU-Guide&
-          git clone --depth 1 https://github.com/kongfl888/luci-app-adguardhome&
+          git clone --depth 1 https://github.com/sirpdboy/luci-app-netdata
+          git clone --depth 1 https://github.com/sensec/ddns-scripts_aliyun
+          git clone --depth 1 https://github.com/KumaTea/MentoHUST-SYSU-Guide
+          git clone --depth 1 https://github.com/kongfl888/luci-app-adguardhome
           git clone --depth 1 https://github.com/BCYDTZ/luci-app-UUGameAcc
           git clone --depth 1 https://github.com/garypang13/luci-app-eqos
-          git clone --depth 1 https://github.com/jerrykuku/luci-app-jd-dailybonus.git
           git clone --depth 1 https://github.com/riverscn/openwrt-iptvhelper.git 
           svn co https://github.com/kenzok8/openwrt-packages/trunk/adguardhome
-          svn co https://github.com/brvphoenix/wrtbwmon/trunk/wrtbwmon&
+          svn co https://github.com/brvphoenix/wrtbwmon/trunk/wrtbwmon
           svn co https://github.com/immortalwrt/luci/trunk/applications/luci-app-airwhu
 
           mv -f my-packages/* ./
